--- a/WellPlay/WellPlay.vcxproj
+++ b/WellPlay/WellPlay.vcxproj
@@ -160,6 +160,8 @@
     <ClInclude Include="EngineRuntime\Component.h" />
     <ClInclude Include="EngineRuntime\GameObject.h" />
     <ClInclude Include="EngineRuntime\MeshRender.h" />
+    <ClInclude Include="EngineRuntime\Scene.h" />
+    <ClInclude Include="EngineRuntime\SceneManager.h" />
     <ClInclude Include="EngineRuntime\Transform.h" />
     <ClInclude Include="GameInput.h" />
     <ClInclude Include="RenderCore.h" />
@@ -212,6 +214,8 @@
     <ClCompile Include="EngineRuntime\Component.cpp" />
     <ClCompile Include="EngineRuntime\GameObject.cpp" />
     <ClCompile Include="EngineRuntime\MeshRender.cpp" />
+    <ClCompile Include="EngineRuntime\Scene.cpp" />
+    <ClCompile Include="EngineRuntime\SceneManager.cpp" />
     <ClCompile Include="EngineRuntime\Transform.cpp" />
     <ClCompile Include="GameInput.cpp" />
     <ClCompile Include="RenderCore.cpp" />
