--- a/WellPlay/WellPlay.vcxproj
+++ b/WellPlay/WellPlay.vcxproj
@@ -111,7 +111,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>E:\Program Files\Autodesk\FBX\FBX SDK\2017.0.1\lib\vs2015\x64\debug;D:\visual studio 2015\Projects\WellPlay\3rd\DuiLib\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>E:\Program Files\Autodesk\FBX\FBX SDK\2017.0.1\lib\vs2015\x64\debug;D:\visual studio 2015\Projects\WellPlay\3rd\DuiLib\Lib;D:\visual studio 2015\Projects\WellPlay\3rd\assimp\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <FxCompile>
       <ShaderModel>5.0</ShaderModel>
@@ -162,6 +162,7 @@
     <ClInclude Include="EngineRuntime\MeshRender.h" />
     <ClInclude Include="EngineRuntime\Scene.h" />
     <ClInclude Include="EngineRuntime\SceneManager.h" />
+    <ClInclude Include="EngineRuntime\SkinMeshRender.h" />
     <ClInclude Include="EngineRuntime\Transform.h" />
     <ClInclude Include="GameInput.h" />
     <ClInclude Include="RenderCore.h" />
@@ -191,6 +192,7 @@
     <ClInclude Include="Render\SamplerManager.h" />
     <ClInclude Include="Render\ShadowBuffer.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Resource\dds.h" />
     <ClInclude Include="Resource\DDSTextureLoader.h" />
     <ClInclude Include="Resource\FBXImport.h" />
@@ -205,6 +207,7 @@
     <ClInclude Include="Wnd\DXWindows.h" />
     <ClInclude Include="Wnd\Editor.h" />
     <ClInclude Include="Wnd\EditorMainWnd.h" />
+    <ClInclude Include="Wnd\LogWnd.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationCore.cpp">
@@ -216,6 +219,7 @@
     <ClCompile Include="EngineRuntime\MeshRender.cpp" />
     <ClCompile Include="EngineRuntime\Scene.cpp" />
     <ClCompile Include="EngineRuntime\SceneManager.cpp" />
+    <ClCompile Include="EngineRuntime\SkinMeshRender.cpp" />
     <ClCompile Include="EngineRuntime\Transform.cpp" />
     <ClCompile Include="GameInput.cpp" />
     <ClCompile Include="RenderCore.cpp" />
@@ -240,9 +244,10 @@
     <ClCompile Include="Render\RootSignature.cpp" />
     <ClCompile Include="Render\SamplerManager.cpp" />
     <ClCompile Include="Render\ShadowBuffer.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Resource\DDSTextureLoader.cpp" />
     <ClCompile Include="Resource\FBXImport.cpp">
-      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">D:\visual studio 2015\Projects\WellPlay\FBX SDK\2017.0.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">D:\visual studio 2015\Projects\WellPlay\FBX SDK\2017.0.1\include;D:\visual studio 2015\Projects\WellPlay\3rd\assimp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <ClCompile Include="Resource\TextureManager.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -257,6 +262,7 @@
     <ClCompile Include="Wnd\DXWindows.cpp" />
     <ClCompile Include="Wnd\Editor.cpp" />
     <ClCompile Include="Wnd\EditorMainWnd.cpp" />
+    <ClCompile Include="Wnd\LogWnd.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="WellPlay.rc" />
@@ -277,6 +283,7 @@
     <Xml Include="..\x64\Debug\skin\DXSkin.xml" />
     <Xml Include="..\x64\Debug\skin\EditorSkin.xml" />
     <Xml Include="..\x64\Debug\skin\FileMenu.xml" />
+    <Xml Include="..\x64\Debug\skin\LogSkin.xml" />
     <Xml Include="..\x64\Debug\skin\VarMenu.xml" />
     <Xml Include="C:\Users\杨周\Desktop\DuiLib_Ultimate-master\Help\属性列表.xml" />
   </ItemGroup>
